--- a/Luna-3D/research.ipynb
+++ b/Luna-3D/research.ipynb
@@ -546,27 +546,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "d7efe1f7",
+   "execution_count": null,
+   "id": "820d2487",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data/annotattions.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mLunaDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mval_stride\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43misValSet_bool\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36mLunaDataset.__init__\u001b[39m\u001b[34m(self, val_stride, isValSet_bool, series_uid)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, val_stride=\u001b[32m0\u001b[39m, isValSet_bool=\u001b[38;5;28;01mNone\u001b[39;00m,series_uid=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[38;5;28mself\u001b[39m.candidateInfo_list=copy.copy(\u001b[43mgetCandidateInfoList\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m series_uid:\n\u001b[32m      6\u001b[39m         \u001b[38;5;28mself\u001b[39m.candidateInfo_list=[\n\u001b[32m      7\u001b[39m             x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.candidateInfo_list \u001b[38;5;28;01mif\u001b[39;00m x.series_uid==series_uid\n\u001b[32m      8\u001b[39m         ]\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 35\u001b[39m, in \u001b[36mgetCandidateInfoList\u001b[39m\u001b[34m(requireOnDisk_bool)\u001b[39m\n\u001b[32m     32\u001b[39m presentOnDisk_set={os.path.split(p)[-\u001b[32m1\u001b[39m][:-\u001b[32m4\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m mhd_list}\n\u001b[32m     34\u001b[39m diameter_dict={}\n\u001b[32m---> \u001b[39m\u001b[32m35\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdata/annotattions.csv\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     36\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(csv.reader(f))[\u001b[32m1\u001b[39m:]:\n\u001b[32m     37\u001b[39m         series_uid=row[\u001b[32m0\u001b[39m]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PROJECTS\\Luna\\luna\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:325\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    318\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    319\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    320\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    321\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    322\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    323\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m325\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'data/annotattions.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "LunaDataset(val_stride=10, isValSet_bool=True)\n"
+    "import gradio as gr\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import numpy as np\n",
+    "import os\n",
+    "from PIL import Image\n",
+    "\n",
+    "# ====================================================================\n",
+    "# --- YOU MUST REPLACE THE FOLLOWING PLACEHOLDER CLASSES AND FUNCTION ---\n",
+    "# ====================================================================\n",
+    "\n",
+    "# Placeholder for your UNetWrapper model.\n",
+    "# Please replace this with your actual UNetWrapper class definition.\n",
+    "class UNetWrapper(nn.Module):\n",
+    "    def __init__(self, in_channels, n_classes, depth, wf, padding, batch_norm, up_mode):\n",
+    "        super().__init__()\n",
+    "        # This is a dummy model for demonstration.\n",
+    "        self.conv = nn.Conv2d(in_channels, n_classes, kernel_size=3, padding=1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return torch.sigmoid(self.conv(x[:, :1, :, :])) \n",
+    "\n",
+    "\n",
+    "class SegmentationAugmentation(nn.Module):\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def forward(self, input_g, label_g):\n",
+    "        return input_g, label_g\n",
+    "\n",
+    "\n",
+    "def getCt(file_path):\n",
+    "    class CT:\n",
+    "        def __init__(self, hu_a):\n",
+    "            self.hu_a = hu_a\n",
+    "    \n",
+    "    hu_a = np.zeros((7, 512, 512), dtype=np.float32)\n",
+    "    center_slice = np.random.rand(512, 512) * 500\n",
+    "    hu_a[3] = center_slice\n",
+    "    hu_a = (hu_a - 1000) / 2000 # Normalization similar to your code\n",
+    "    \n",
+    "    # Simple dummy \"nodule\" for demonstration\n",
+    "    hu_a[3, 200:300, 200:300] = 0.8\n",
+    "    return CT(hu_a)\n",
+    "\n",
+    "\n",
+    "MODEL_PATH = 'data-unversioned/part2/models/p2ch13/seg_2023-10-27_12.00.00_test.best.state'\n",
+    "\n",
+    "def predict_segmentation(ct_file):\n",
+    "    \"\"\"\n",
+    "    Main function for the Gradio pipeline.\n",
+    "    It takes a CT scan file, runs it through the model, and returns a visualization.\n",
+    "    \"\"\"\n",
+    "    if not ct_file:\n",
+    "        return None\n",
+    "\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "    \n",
+    "    segmentation_model = UNetWrapper(in_channels=7, n_classes=1, depth=3, wf=4, padding=True, batch_norm=True, up_mode='upconv')\n",
+    "    \n",
+    "    # Load the trained weights\n",
+    "    if os.path.exists(MODEL_PATH):\n",
+    "        try:\n",
+    "            state = torch.load(MODEL_PATH, map_location=device)\n",
+    "            segmentation_model.load_state_dict(state['model_state'])\n",
+    "            print(f\"Model loaded successfully from {MODEL_PATH}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error loading model state: {e}\")\n",
+    "            return None\n",
+    "    else:\n",
+    "        print(f\"Model state file not found at {MODEL_PATH}. Using untrained model.\")\n",
+    "        \n",
+    "    segmentation_model.to(device)\n",
+    "    segmentation_model.eval()\n",
+    "\n",
+    "    # Get the file path from Gradio's file object\n",
+    "    file_path = ct_file.name\n",
+    "\n",
+    "    # Load the CT data using your project's function\n",
+    "    # Note: Your original script used getCt with a series_uid, but Gradio provides a file path.\n",
+    "    # We will pass the file path to our placeholder getCt function.\n",
+    "    ct = getCt(file_path)\n",
+    "\n",
+    "    # Convert the loaded data to a PyTorch tensor\n",
+    "    # The original training script works on 2D slices. We will take the central slice.\n",
+    "    center_slice_ndx = ct.hu_a.shape[0] // 2\n",
+    "    \n",
+    "    # Assume getCt returns a tensor of shape (channels, H, W) where channels = contextSlices_count*2+1\n",
+    "    # We will create an input tensor of shape (7, 512, 512) for the U-Net.\n",
+    "    input_tensor = torch.from_numpy(ct.hu_a).unsqueeze(0).to(device)\n",
+    "\n",
+    "    # Run inference\n",
+    "    with torch.no_grad():\n",
+    "        prediction_g = segmentation_model(input_tensor)[0]\n",
+    "\n",
+    "    # Convert prediction to a boolean mask\n",
+    "    prediction_a = prediction_g.cpu().detach().numpy()[0] > 0.5\n",
+    "    \n",
+    "    # Get the ground truth label (if available, for this example we'll assume it's just the input)\n",
+    "    label_a = ct.hu_a[center_slice_ndx] > 0.5\n",
+    "\n",
+    "    # Create the visualization image, similar to your logImages function\n",
+    "    # Normalize the CT slice for display\n",
+    "    ctSlice_a = ct.hu_a[center_slice_ndx]\n",
+    "    \n",
+    "    image_a = np.zeros((512, 512, 3), dtype=np.float32)\n",
+    "    image_a[:, :, :] = ctSlice_a.reshape((512, 512, 1))\n",
+    "    \n",
+    "    # Add colored overlays for true/false positives/negatives\n",
+    "    # True Positives (yellow-green)\n",
+    "    image_a[:, :, 0] += (prediction_a & label_a)\n",
+    "    image_a[:, :, 1] += (prediction_a & label_a) * 0.5\n",
+    "    # False Positives (red)\n",
+    "    image_a[:, :, 0] += (prediction_a & ~label_a)\n",
+    "    # False Negatives (blue)\n",
+    "    image_a[:, :, 2] += (~prediction_a & label_a)\n",
+    "\n",
+    "    # Final normalization and clipping\n",
+    "    image_a *= 0.5\n",
+    "    image_a = np.clip(image_a, 0, 1)\n",
+    "\n",
+    "    # Convert the NumPy array to a PIL Image object\n",
+    "    output_image = Image.fromarray((image_a * 255).astype(np.uint8))\n",
+    "    \n",
+    "    return output_image\n",
+    "\n",
+    "# ====================================================================\n",
+    "# --- GRADIO INTERFACE SETUP ---\n",
+    "# ====================================================================\n",
+    "\n",
+    "demo = gr.Interface(\n",
+    "    fn=predict_segmentation,\n",
+    "    inputs=gr.File(label=\"Upload CT Scan File (.dcm)\"),\n",
+    "    outputs=gr.Image(label=\"Segmentation Result\", type=\"pil\"),\n",
+    "    title=\"CT Scan Nodule Segmentation\",\n",
+    "    description=(\n",
+    "        \"Upload a single CT scan file to see the model's segmentation prediction. \"\n",
+    "        \"The output image will show the original slice with an overlay: \"\n",
+    "        \"<span style='color:red'>Red for False Positives (predicted but not a nodule)</span>, \"\n",
+    "        \"<span style='color:blue'>Blue for False Negatives (nodule missed by model)</span>, \"\n",
+    "        \"and <span style='color:yellow'>Yellow-green for True Positives (correctly predicted)</span>.\"\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    demo.launch()"
    ]
   }
  ],
